--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "dev": "node scripts/watch.mjs",
     "build": "npm run typecheck && node scripts/build.mjs && CSC_IDENTITY_AUTO_DISCOVERY=false electron-builder --config .electron-builder.config.js",
-    "typecheck": "tsc --noEmit --project packages/renderer/tsconfig.json"
+    "typecheck": "tsc --noEmit --project packages/renderer/tsconfig.json",
+    "prettier:write": "prettier --write 'packages/**/*.{ts,tsx,js,json,html,css}'"
   },
   "engines": {
     "node": ">=14.17.0"
@@ -27,6 +28,7 @@
     "electron-builder": "^22.14.13",
     "postcss": "^8.4.6",
     "postcss-loader": "^6.2.1",
+    "prettier": "2.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "sass": "^1.49.7",
