--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@types/react-dom": "^17.0.11",
     "@vitejs/plugin-react": "^1.2.0",
     "autoprefixer": "^10.4.2",
-    "electron": "^17.0.1",
+    "electron": "17.1.0",
     "electron-builder": "^22.14.13",
     "postcss": "^8.4.6",
     "postcss-loader": "^6.2.1",
