--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "main": "dist/main/index.cjs",
   "scripts": {
     "dev": "node scripts/watch.mjs",
-    "build": "npm run typecheck && node scripts/build.mjs && CSC_IDENTITY_AUTO_DISCOVERY=false electron-builder --config .electron-builder.config.js",
+    "build": "npm run typecheck && node scripts/build.mjs && cross-env CSC_IDENTITY_AUTO_DISCOVERY=false electron-builder --config .electron-builder.config.js",
     "typecheck": "tsc --noEmit --project packages/renderer/tsconfig.json",
     "prettier:write": "prettier --write 'packages/**/*.{ts,tsx,js,json,html,css}'"
   },
@@ -22,8 +22,11 @@
   "devDependencies": {
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
+    "@types/webgl2": "^0.0.6",
     "@vitejs/plugin-react": "^1.2.0",
+    "@webgpu/types": "^0.1.13",
     "autoprefixer": "^10.4.2",
+    "cross-env": "^7.0.3",
     "electron": "17.1.0",
     "electron-builder": "^22.14.13",
     "postcss": "^8.4.6",
