--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   },
   "dependencies": {
     "electron-store": "^8.0.1",
-    "gl-matrix": "^3.4.3"
+    "gl-matrix": "^3.4.3",
+    "tw-elements": "^1.0.0-alpha12"
   },
   "devDependencies": {
     "@types/react": "^17.0.39",
