--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "tw-elements": "^1.0.0-alpha12"
   },
   "devDependencies": {
+    "@originjs/vite-plugin-commonjs": "^1.0.3",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
     "@types/webgl2": "^0.0.6",
